# fly-connectomics

./: .gitignore  README.md  articles.db  pyproject.toml
analysis/: hemibrain.ipynb
analysis/flywire/: ORN.ipynb  PN->FB.ipynb  cleanup.ipynb
figures/ALPN_connectivity/: ALPN_downstream_neurons_step_0.npy  ALPN_downstream_neurons_step_1.npy  ALPN_downstream_neurons_step_2.npy  ALPN_output_values_scatter_step_1.html  ALPN_output_values_scatter_step_2.html  ALPN_output_values_step_0.npy  ALPN_output_values_step_1.npy  ALPN_output_values_step_2.npy
flyconnectomics/app/: bioflask.py
flyconnectomics/app/template/: index.html  summary.html
